single keyword search function added, and key word will be highlighted

--- a/templates/address/showall.html.twig
+++ b/templates/address/showall.html.twig
@@ -9,14 +9,36 @@
     <table class="table table-hover">
         <thead>
             <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Anrede</th>
-                <th scope="col">Vorname</th>
-                <th scope="col">Nachname</th>
-                <th scope="col">Address</th>
-                <th scope="col">Geburtsdatum</th>
-                <th scope="col">Tel</th>
-                <th scope="col">Email</th>
+                <th scope="col">ID
+                    <a class="no-dec" href="/showall?col=id&order=ASC">&#8593;</a>
+                    <a class="no-dec" href="/showall?col=id&order=DESC">&#8595;</a>
+                </th>
+                <th scope="col">Anrede
+                    <a class="no-dec" href="/showall?col=anrede&order=ASC">&#8593;</a>
+                    <a class="no-dec" href="/showall?col=anrede&order=DESC">&#8595;</a>
+                </th>
+                <th scope="col">Vorname
+                    <a class="no-dec" href="/showall?col=vorname&order=ASC">&#8593;</a>
+                    <a class="no-dec" href="/showall?col=vorname&order=DESC">&#8595;</a></th>
+                <th scope="col">Nachname
+                    <a class="no-dec" href="/showall?col=nachname&order=ASC">&#8593;</a>
+                    <a class="no-dec" href="/showall?col=nachname&order=DESC">&#8595;</a>
+                </th>
+                <th scope="col">Address
+                    <a class="no-dec" href="/showall?col=strasse&order=ASC">&#8593;</a>
+                    <a class="no-dec" href="/showall?col=strasse&order=DESC">&#8595;</a></th>
+                <th scope="col">Geburtsdatum
+                    <a class="no-dec" href="/showall?col=geburtsdatum&order=ASC">&#8593;</a>
+                    <a class="no-dec" href="/showall?col=geburtsdatum&order=DESC">&#8595;</a>
+                </th>
+                <th scope="col">Tel
+                    <a class="no-dec" href="/showall?col=telefon&order=ASC">&#8593;</a>
+                    <a class="no-dec" href="/showall?col=telefon&order=DESC">&#8595;</a>
+                </th>
+                <th scope="col">Email
+                    <a class="no-dec" href="/showall?col=email&order=ASC">&#8593;</a>
+                    <a class="no-dec" href="/showall?col=email&order=DESC">&#8595;</a>
+                </th>
                 <th scope="col"></th>
                 <th scope="col"></th>
             </tr>
